--- a/cakesandpies.html
+++ b/cakesandpies.html
@@ -112,6 +112,16 @@
         <div class="row">
           <div class="col-md-4">
             <figure class="my-3 tstbite-card">
+              <a href="/chocolatepecanpie" class="tstbite-animation rounded-6">
+                <img src="assets/images/food/chocolatepecanpie.png" class="w-100" alt="Chocolate Pecan Pie">
+              </a>
+              <figcaption class="mt-2">
+                <a href="/chocolatepecanpie" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Pecan Pie</a>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-md-4">
+            <figure class="my-3 tstbite-card">
               <a href="/hazelnutoliveoilcake" class="tstbite-animation rounded-6">
                 <img src="assets/images/food/hazelnutoliveoilcake.png" class="w-100" alt="Hazelnut Olive Oil Cake">
               </a>
@@ -130,6 +140,8 @@
               </figcaption>
             </figure>
           </div>
+        </div>
+        <div class="row">
           <div class="col-md-4">
             <figure class="my-3 tstbite-card">
               <a href="/gfdfpeachpie" class="tstbite-animation rounded-6">
@@ -140,8 +152,6 @@
               </figcaption>
             </figure>
           </div>
-        </div>
-        <div class="row">
           <div class="col-md-4">
             <figure class="my-3 tstbite-card">
               <a href="/bostoncreamcupcakes" class="tstbite-animation rounded-6">
@@ -152,6 +162,7 @@
               </figcaption>
             </figure>
           </div>
+        </div>
         </div>
       </div>
     </div>
