--- a/chocolatechipcookiecake.html
+++ b/chocolatechipcookiecake.html
@@ -186,7 +186,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2 cups (250g) all-purpose flour (spoon & leveled)</label>
+                  <label class="form-check-label" for="unsalted">2 cups (250g) all-purpose flour (spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
