--- a/chocolatepecanpie.html
+++ b/chocolatepecanpie.html
@@ -121,25 +121,24 @@
             </svg>
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
-          <h5 class="py-3 mb-0 h2">Peach Pie</h5>
-          <div style="font-family:MADEVoyagerThin; font-size:15px;"><img src="assets/images/icons/gf.png" style="width:35px; height:35px"></div>
+          <h5 class="py-3 mb-0 h2">Chocolate Pecan Pie</h5>
         </div>
       </div>
       <div class="d-flex flex-wrap">
         <div class="my-2 me-4">
-          <small class="ps-1">Author: Wife Mama Foodie</small>
+          <small class="ps-1">Authors: Inspired Taste (dough) & Celebrating Sweets (filling)</small>
         </div>
         <div class="my-2 me-4">
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
             <path d="M2,14.666a2,2,0,0,1-2-2V3.333a2,2,0,0,1,2-2H3.334V.667a.667.667,0,0,1,1.333,0v.667h4V.667A.667.667,0,0,1,10,.667v.667h1.333a2,2,0,0,1,2,2v9.334a2,2,0,0,1-2,2Zm-.667-2A.667.667,0,0,0,2,13.333h9.334A.667.667,0,0,0,12,12.667v-6H1.333ZM12,5.333v-2a.667.667,0,0,0-.667-.667H10v.667a.667.667,0,0,1-1.334,0V2.666h-4v.667a.667.667,0,1,1-1.333,0V2.666H2a.667.667,0,0,0-.667.667v2Z"/>
           </svg>
-          <small>July 22nd, 2023</small>
+          <small>November 27th, 2024</small>
         </div>
       </div>
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/food/gfdfpeachpie.jpeg" class="w-100" >
+          <img src="assets/images/food/chocolatepecanpie.png" class="w-100" >
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
@@ -147,15 +146,15 @@
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
                 <small>Prep Time</small>
-                <span>1 hour</span>
+                <span>1 hour 45 minutes</span>
               </li>
               <li>
                 <small>Cook Time</small>
-                <span>50 minutes</span>
+                <span>45 minutes</span>
               </li>
               <li>
                 <small>Total Time</small>
-                <span>1 hour 50 minutes</span>
+                <span>2 hours 30 minutes</span>
               </li>
               <li>
                 <small>Serving</small>
@@ -171,70 +170,62 @@
                 <strong>Dough</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="flour">2 1/4 cups gluten free all-purpose flour (Bob's Red Mill 1 to 1 Baking Flour, spooned & leveled)</label>
+                  <label class="form-check-label" for="flour">1 1/4 cups (162g) all-purpose flour, (spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="tapiocaflour">1/4 cup tapioca flour</label>
+                  <label class="form-check-label" for="salt">1/4 teaspoon fine sea salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="sugar">1 tablespoon coconut sugar</label>
+                  <label class="form-check-label" for="sugar">1/2 tablespoon sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="xanthangum">1/2 teaspoon xanthan gum</label>
+                  <label class="form-check-label" for="butter">1/2 cup (115g) very cold unsalted butter, cut into small cubes</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="salt">1/2 teaspoon salt</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                    <input type="checkbox"  class="form-check-input">
-                    <label class="form-check-label" for="butter">3/4 cup cold lactose-free butter, cubed into small pieces</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                    <input type="checkbox"  class="form-check-input">
-                    <label class="form-check-label" for="acv">1 teaspoon ACV</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                    <input type="checkbox"  class="form-check-input">
-                    <label class="form-check-label" for="egg">1 egg (substitute additional cold water for egg-free)</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="water">3-5 tablespoons ice cold water (substitute 8-9 tablespoons for egg-free)</label>
+                  <label class="form-check-label" for="water">3 to 4 tablespoons ice water (plus more, if needed)</label>
                 </div>
               </div>
               <div class="checklist pb-2">
                 <strong>Filling</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="peaches">5-6 large peaches, peeled and cut</label>
+                  <label class="form-check-label" for="butter">6 tablespoons unsalted butter, cut into pieces</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                     <input type="checkbox"  class="form-check-input">
-                    <label class="form-check-label" for="sugar">1/2 cup coconut sugar</label>
+                    <label class="form-check-label" for="sugar">1 cup packed brown sugar</label>
                   </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="lemon">Juice of half a meyer lemon</label>
+                  <label class="form-check-label" for="maplesyrup">1/2 cup pure maple syrup</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="cinnamon">1/4-1/2 teaspoon cinnamon, to taste</label>
+                  <label class="form-check-label" for="cocoapowder">1 tablespoon unsweetened cocoa powder</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="arrowroot">3 tablespoons arrowroot starch</label>
+                  <label class="form-check-label" for="salt">1/2 teaspoon kosher salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="salt">Pinch of salt</label>
+                  <label class="form-check-label" for="eggs">3 large eggs</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="vanilla">Splash of vanilla extract</label>
+                  <label class="form-check-label" for="vanilla">1 teaspoon vanilla extract</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="pecans">1 1/2 cups halves & pieces pecans</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="chocolate">1/2 cup chopped chocolate</label>
                 </div>
               </div>
             </div>
@@ -248,73 +239,73 @@
                 </li>
                 <li>
                   <span>1</span>
-                  Mix flours, sugar, xanthan gum, and salt in a large mixing bowl.
+                  Fill a measuring glass with water and ice cubes and set aside.
                 </li>
                 <li>
                   <span>2</span>
-                  Cut in butter until mixture is crumbly and no large chunks of butter remain.
+                  Add 3/4 cup flour, salt, and sugar to a food processor. Pulse 2 to 3 times until combined. The remaining cup of flour will be added later.
                 </li>
                 <li>
                   <span>3</span>
-                  Stir together ACV and eggs until well blended and add to the flour mixture. Slowly stir in cold water one tablespoon at a time, just until dough holds together. If omitting eggs, mix ACV with 2-3 tablespoons of water before adding to the flour mixture.
+                  Scatter butter cubes over flour and process until a dough or paste begins to form, about 15 seconds (there should be no uncoated flour).
                 </li>
                 <li>
                   <span>4</span>
-                  Divide dough in half and shape into round, flat discs. Wrap each in plastic wrap and chill for 20-30 minutes in the fridge. While the dough chills, prepare the filling.
+                  Scrape bowl, redistribute the flour-butter mixture then add remaining 1/2 cup of flour. Pulse 4 to 5 times until flour is evenly distributed (dough should look broken up and a little crumbly).
+                </li>
+                <li>
+                  <span>5</span>
+                  Transfer to a medium bowl then sprinkle ice water over mixture — start with 2 tablespoons and add from there. Using a rubber spatula, press the dough into itself. The crumbs should begin to form larger clusters. If you pinch some of the dough and it holds together, it's ready. If the dough falls apart, add 1 to 2 more tablespoons of water and continue to press until dough comes together.
+                </li>
+                <li>
+                  <span>6</span>
+                  Remove dough from bowl and place in a mound on a clean surface. Work the dough just enough to form a ball, then form into a disk. Wrap the disk with plastic wrap and refrigerate for at least 1 hour and up to 2 days.
                 </li>
                 <li style="padding-left: 0px;">
                   <strong>Filling</strong>
                 </li>
                 <li>
                   <span>1</span>
-                  Preheat oven to 400°F.
+                  Preheat oven to 350°F with a rack in the center to lower third of the oven.
                 </li>
                 <li>
                   <span>2</span>
-                  Peel peaches, remove the pit, and cut into small cubes. Place cut peaches into a bowl and stir in coconut sugar, lemon juice, cinnamon, arrowroot starch, salt, & vanilla extract.
-                </li>
-                <li style="padding-left: 0px;">
-                  <strong>Pie Assembly</strong>
-                </li>
-                <li>
-                  <span>1</span>
-                  Lightly grease a 9-inch pie plate. Remove one disc from the fridge and place between two pieces of parchment paper or plastic wrap. Roll into a large circle, a few inches larger than the pie plate.
-                </li>
-                <li>
-                  <span>2</span>
-                  Use the parchment paper or plastic wrap to invert the dough into the plate. Gently press to fit into the bottom of the plate and up the sides of the plate. If the dough breaks, just press it back together. Add any excess dough to the second disc.
+                  In a saucepan over medium heat, melt butter. Add brown sugar, maple syrup, cocoa powder, and salt. Whisk until smooth and combined. Bring the mixture to a low simmer (bubbles forming around the perimeter of the pan), then remove from the heat. Pour the mixture into a bowl to cool for 15 minutes.
                 </li>
                 <li>
                   <span>3</span>
-                  Pour the filling into the pie pan.
+                  Once cooled, add eggs and extract to the syrup mixture, whisking until combined.
                 </li>
                 <li>
                   <span>4</span>
-                  Remove the second disc from the fridge and roll out into a slightly thicker circle than the first disc.
+                  Sprinkle the chopped pecans and chocolate chips into the bottom of the uncooked pie crust. Pour the syrup mixture over the pecans, rearranging the pecans if necessary (most the nuts and chocolate chips will float to the top).
                 </li>
                 <li>
                   <span>5</span>
-                  Invert the rolled-out second disc over the top of the pie to cover it. Press the tines of a fork into the edges of the crust to create small indented lines, rotating the pie plate until you have created the pattern all the way around the pie.
-                </li>
-                <li>
-                  <span>6</span>
-                  <i>Optional: </i> Beat 1 egg with 2 teaspoons of water and use a pastry brush to brush the egg wash all over the dough to help it brown in the oven.
-                </li>
-                <li>
-                  <span>7</span>
-                  Place pie onto a baking sheet and place into the preheated oven on the middle rack.
-                </li>
-                <li>
-                  <span>8</span>
-                  Bake until pie is golden brown and filling is bubbling (or if you're able, pierce a peach to see if it's tender), about 45-60 minutes.
-                </li>
-                <li>
-                  <span>9</span>
-                  Let pie cool for an hour at room temperature, then place in the refrigerator overnight.
+                  Lightly spritz a piece of foil with non-stick spray. Cover the pie with foil and bake for 30 minutes. Remove the foil, then continue baking for another 15-25 minutes (20 minutes was the magic number for me), until the edges are set but the center of the pie is still a bit jiggly (like gelatin). Sprinkle the top of the pie with a few sprinkles of flaky finishing salt. Place the pan on a wire rack to cool completely - it will firm up as it cools.
                 </li>
               </ul>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+    <section class="tstbite-components my-4 my-md-5">
+      <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <img src="assets/images/food/chocolatepecanpie1.png" class="w-100" alt="Chocolate Pecan Pie">
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <img src="assets/images/food/chocolatepecanpie2.png" class="w-100" alt="Chocolate Pecan Pie">
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <img src="assets/images/food/chocolatepecanpie.png" class="w-100" alt="Chocolate Pecan Pie">
+          </figure>
         </div>
       </div>
     </section>
