--- a/cinnamonrolls.html
+++ b/cinnamonrolls.html
@@ -174,7 +174,7 @@
                 <strong>Dough</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">2 3/4 cups (344g) flour (spoon & leveled)</label>
+                  <label class="form-check-label">2 3/4 cups (344g) flour (spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" class="form-check-input">
