--- a/creampuffs.html
+++ b/creampuffs.html
@@ -174,7 +174,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 cup (120g) flour (spoon & leveled)</label>
+                  <label class="form-check-label" for="unsalted">1 cup (120g) flour (spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
