--- a/gfdfbiscuits.html
+++ b/gfdfbiscuits.html
@@ -174,7 +174,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="flour">2 cups gluten free all-purpose flour (Bob's Red Mill 1 to 1 Baking Flour, spoon & leveled)</label>
+                  <label class="form-check-label" for="flour">2 cups gluten free all-purpose flour (Bob's Red Mill 1 to 1 Baking Flour, spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
