--- a/gfdfpumpkinbread.html
+++ b/gfdfpumpkinbread.html
@@ -196,7 +196,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 1/2 cup gluten free all-purpose flour (Bob's Red Mill 1 to 1 Baking Flour, spoon & leveled)</label>
+                  <label class="form-check-label" for="unsalted">1 1/2 cup gluten free all-purpose flour (Bob's Red Mill 1 to 1 Baking Flour, spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
