--- a/snickerdoodlecookies.html
+++ b/snickerdoodlecookies.html
@@ -171,11 +171,11 @@
                 <strong>Cookies</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="almondflour">1 1/2 cups almond flour (spoon & leveled)</label>
+                  <label class="form-check-label" for="almondflour">1 1/2 cups almond flour (spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="coconutflour">1/2 cup + 1 tablespoon coconut flour (spoon & leveled)</label>
+                  <label class="form-check-label" for="coconutflour">1/2 cup + 1 tablespoon coconut flour (spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
