--- a/spiralburek.html
+++ b/spiralburek.html
@@ -173,7 +173,7 @@
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="flour">3 cups (400g) flour (spoon & leveled)</label>
+                  <label class="form-check-label" for="flour">3 cups (400g) flour (spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
