--- a/sweet.html
+++ b/sweet.html
@@ -440,6 +440,16 @@
             </figcaption>
           </figure>
         </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/chocolatepecanpie" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/chocolatepecanpie.png" class="w-100" alt="Chocolate Pecan Pie">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/chocolatepecanpie" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Pecan Pie</a>
+            </figcaption>
+          </figure>
+        </div>
       </div>
     </div>
     </section>
