--- a/loafbread.html
+++ b/loafbread.html
@@ -169,7 +169,7 @@
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">3 cups flour (spoon & leveled)</label>
+                  <label class="form-check-label" for="crackers">3 cups flour (spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
