--- a/monkeybread.html
+++ b/monkeybread.html
@@ -174,7 +174,7 @@
                 <strong>Monkey Bread</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">2 cups flour (spoon & leveled)</label>
+                  <label class="form-check-label" for="crackers">2 cups flour (spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
