--- a/pumpkincookies.html
+++ b/pumpkincookies.html
@@ -170,7 +170,7 @@
                 <strong>Cookies</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">2 cups (284g) flour (spoon & leveled)</label>
+                  <label class="form-check-label" for="crackers">2 cups (284g) flour (spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
