--- a/cakesandpies.html
+++ b/cakesandpies.html
@@ -162,6 +162,16 @@
               </figcaption>
             </figure>
           </div>
+          <div class="col-md-4">
+            <figure class="my-3 tstbite-card">
+              <a href="/pumpkinpie" class="tstbite-animation rounded-6">
+                <img src="assets/images/food/pumpkinpie3.jpg" class="w-100" alt="Pumpkin Pie">
+              </a>
+              <figcaption class="mt-2">
+                <a href="/pumpkinpie" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Pie</a>
+              </figcaption>
+            </figure>
+          </div>
         </div>
         </div>
       </div>
