--- a/pumpkinpie.html
+++ b/pumpkinpie.html
@@ -121,12 +121,12 @@
             </svg>
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
-          <h5 class="py-3 mb-0 h2">Chocolate Pecan Pie</h5>
+          <h5 class="py-3 mb-0 h2">Pumpkin Pie</h5>
         </div>
       </div>
       <div class="d-flex flex-wrap">
         <div class="my-2 me-4">
-          <small class="ps-1">Authors: Inspired Taste (dough) & Celebrating Sweets (filling)</small>
+          <small class="ps-1">Author: Inspired Taste</small>
         </div>
         <div class="my-2 me-4">
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
@@ -138,7 +138,7 @@
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/food/chocolatepecanpie.png" class="w-100" >
+          <img src="assets/images/food/pumpkinpie3.jpg" class="w-100" >
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
@@ -146,11 +146,11 @@
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
                 <small>Prep Time</small>
-                <span>1 hour 45 minutes</span>
+                <span>1 hour 30 minutes</span>
               </li>
               <li>
                 <small>Cook Time</small>
-                <span>45 minutes</span>
+                <span>1 hour</span>
               </li>
               <li>
                 <small>Total Time</small>
@@ -193,39 +193,35 @@
                 <strong>Filling</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="butter">6 tablespoons unsalted butter, cut into pieces</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                    <input type="checkbox"  class="form-check-input">
-                    <label class="form-check-label" for="sugar">1 cup packed brown sugar</label>
-                  </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="maplesyrup">1/2 cup pure maple syrup</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="cocoapowder">1 tablespoon unsweetened cocoa powder</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="salt">1/2 teaspoon kosher salt</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="eggs">3 large eggs</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
+                    <input type="checkbox"  class="form-check-input">
+                    <label class="form-check-label" for="sugar">1/2 cup granulated sugar</label>
+                  </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="vanilla">1 teaspoon vanilla extract</label>
+                  <label class="form-check-label" for="sugar">1/3 cup light brown sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="pecans">1 1/2 cups halves & pieces pecans</label>
+                  <label class="form-check-label" for="pumpkin">1 (15oz) can pure pumpkin puree</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="chocolate">1/2 cup chopped chocolate</label>
+                  <label class="form-check-label" for="cream">3/4 cup heavy whipping cream</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="vanilla">1 teaspoon vanilla</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="pumpkinpiespice">2 1/2 teaspoons pumpkin pie spice (adjust to your liking)</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="salt">1/4 teaspoon salt</label>
                 </div>
               </div>
             </div>
@@ -261,28 +257,32 @@
                   <span>6</span>
                   Remove dough from bowl and place in a mound on a clean surface. Work the dough just enough to form a ball, then form into a disk. Wrap the disk with plastic wrap and refrigerate for at least 1 hour and up to 2 days.
                 </li>
+                <li>
+                  <span>7</span>
+                  Carefully place the dough into the pie dish without stretching it, and trim the edges to within 1 inch of the dish. Refrigerate while you prepare your filling.
+                </li>
                 <li style="padding-left: 0px;">
                   <strong>Filling</strong>
                 </li>
                 <li>
                   <span>1</span>
-                  Preheat oven to 350°F with a rack in the center to lower third of the oven.
+                  Preheat the oven to 425°F. Set aside a large baking sheet.
                 </li>
                 <li>
                   <span>2</span>
-                  In a saucepan over medium heat, melt butter. Add brown sugar, maple syrup, cocoa powder, and salt. Whisk until smooth and combined. Bring the mixture to a low simmer (bubbles forming around the perimeter of the pan), then remove from the heat. Pour the mixture into a bowl to cool for 15 minutes.
+                  Whisk the eggs and both sugars together until smooth. Add pumpkin puree, cream, vanilla, cinnamon, ginger, cloves, and salt. Whisk until well blended.
                 </li>
                 <li>
                   <span>3</span>
-                  Once cooled, add eggs and extract to the syrup mixture, whisking until combined.
+                  Place the pie dish on your baking sheet. Pour the pumpkin filling into the pie shell.
                 </li>
                 <li>
                   <span>4</span>
-                  Sprinkle the chopped pecans and chocolate chips into the bottom of the uncooked pie crust. Pour the syrup mixture over the pecans, rearranging the pecans if necessary (most the nuts and chocolate chips will float to the top).
+                  Bake the pumpkin pie at 425°F for 15 minutes. Reduce the oven temperature to 375°F and bake for 35 to 45 minutes or until a toothpick or thin knife plunged it into the pie, about 2 inches from the edge, comes out clean. Rotate once or twice during baking. If, while the pie is baking, the top of the crust becomes too dark, cover it with a thin strip of aluminum foil or with a pie cover.
                 </li>
                 <li>
                   <span>5</span>
-                  Lightly spritz a piece of foil with non-stick spray. Cover the pie with foil and bake for 30 minutes. Remove the foil, then continue baking for another 15-25 minutes (20 minutes was the magic number for me), until the edges are set but the center of the pie is still a bit jiggly (like gelatin). Sprinkle the top of the pie with a few sprinkles of flaky finishing salt. Place the pan on a wire rack to cool completely - it will firm up as it cools.
+                  Cool completely on a wire rack for 2 to 3 hours or until room temperature. Serve or refrigerate overnight (the pie sets even more after a night in the fridge).
                 </li>
               </ul>
             </div>
@@ -294,17 +294,17 @@
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <img src="assets/images/food/chocolatepecanpie1.png" class="w-100" alt="Chocolate Pecan Pie">
+            <img src="assets/images/food/pumpkinpie1.jpg" class="w-100" alt="Pumpkin Pie">
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <img src="assets/images/food/chocolatepecanpie2.png" class="w-100" alt="Chocolate Pecan Pie">
+            <img src="assets/images/food/pumpkinpie2.jpg" class="w-100" alt="Pumpkin Pie">
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <img src="assets/images/food/chocolatepecanpie.png" class="w-100" alt="Chocolate Pecan Pie">
+            <img src="assets/images/food/pumpkinpie3.jpg" class="w-100" alt="Pumpkin Pie">
           </figure>
         </div>
       </div>
