--- a/savory.html
+++ b/savory.html
@@ -258,6 +258,16 @@
             </figcaption>
           </figure>
         </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/trufflepasta" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/trufflepasta.heic" class="w-100" alt="Truffle Pasta">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/trufflepasta" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Truffle Pasta</a>
+            </figcaption>
+          </figure>
+        </div>
       </div>
     </div>
     </section>
