--- a/trufflepasta.html
+++ b/trufflepasta.html
@@ -106,150 +106,143 @@
           </button>        
         </nav>
       </header>
+  </div>
 
+  <div class="container">
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Entrees</h5>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/volcanosalmon" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/volcanosalmon.jpg" class="w-100" alt="Volcano Salmon">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/volcanosalmon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Volcano Salmon</a>
-            </figcaption>
-          </figure>
+      <div class="d-sm-flex">
+        <div class="tstbite-svg order-sm-2 ms-auto">
         </div>
-         <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/soygingerbass" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/chileanseabass.jpeg" class="w-100" alt="Soy Ginger Chilean Sea Bass">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/soygingerbass" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Soy Ginger Chilean Sea Bass</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/kimchifriedrice" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/kimchifriedrice.jpg" class="w-100" alt="Kimchi Fried Rice">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/kimchifriedrice" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Kimchi Fried Rice</a>
-            </figcaption>
-          </figure>
+        <div>
+          <strong>
+            <svg data-name="feather-icon/trending-up" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+              <rect data-name="Bounding Box" width="20" height="20" fill="rgba(255,255,255,0)"></rect>
+              <path d="M.244,11.423a.834.834,0,0,1,0-1.178L6.494,3.994a.834.834,0,0,1,1.178,0L11.25,7.571l5.9-5.9H14.167a.833.833,0,1,1,0-1.667h5A.833.833,0,0,1,20,.833v5a.834.834,0,0,1-1.667,0V2.845L11.839,9.339a.834.834,0,0,1-1.179,0L7.083,5.761l-5.66,5.661a.834.834,0,0,1-1.179,0Z" transform="translate(0 4.167)" fill="#ff642f"></path>
+            </svg>
+            <span class="ms-2 caption font-weight-medium">100% would make this again</span>
+          </strong>
+          <h5 class="py-3 mb-0 h2">Truffle Pasta</h5>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/meatballs" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/meatballs.jpg" class="w-100" alt="Italian Meatballs">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/meatballs" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Italian Meatballs</a>
-            </figcaption>
-          </figure>
+      <div class="d-flex flex-wrap">
+        <div class="my-2 me-4">
+          <small class="ps-1">Author: Cucina By Elena</small>
         </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/rosemarychickensandwich" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/rosemarychickensandwich.jpg" class="w-100" alt="Rosemary Chicken Sandwich">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/rosemarychickensandwich" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Rosemary Chicken Sandwich</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/stirfry" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/teriyakistirfry.jpg" class="w-100" alt="Teriyaki Stir Fry">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/stirfry" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Teriyaki Stir Fry</a>
-            </figcaption>
-          </figure>
+        <div class="my-2 me-4">
+          <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
+            <path d="M2,14.666a2,2,0,0,1-2-2V3.333a2,2,0,0,1,2-2H3.334V.667a.667.667,0,0,1,1.333,0v.667h4V.667A.667.667,0,0,1,10,.667v.667h1.333a2,2,0,0,1,2,2v9.334a2,2,0,0,1-2,2Zm-.667-2A.667.667,0,0,0,2,13.333h9.334A.667.667,0,0,0,12,12.667v-6H1.333ZM12,5.333v-2a.667.667,0,0,0-.667-.667H10v.667a.667.667,0,0,1-1.334,0V2.666h-4v.667a.667.667,0,1,1-1.333,0V2.666H2a.667.667,0,0,0-.667.667v2Z"/>
+          </svg>
+          <small>December 21st, 2024</small>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/breadcrumbmustardchicken" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/bcchicken.jpg" class="w-100" alt="Bread Crumb Mustard Chicken">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/breadcrumbmustardchicken" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Bread Crumb Mustard Chicken</a>
-            </figcaption>
-          </figure>
+      <div class="blog-detail">
+        <hr>
+        <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
+          <img src="assets/images/food/trufflepasta.heic" class="w-100" >
         </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/tofu" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/tofu.jpg" class="w-100" alt="Crispy Baked Tofu">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/tofu" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Crispy Baked Tofu</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/lettucecups" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/lettucecups.jpg" class="w-100" alt="Lettuce Cups">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/lettucecups" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chicken Teriyaki Lettuce Cups</a>
-            </figcaption>
-          </figure>
+        <br>
+        <div class="row mt-0 mt-md-5">
+          <div class="col-md-12">
+            <ul class="list-unstyled component-list tstbite-svg">
+              <li>
+                <small>Prep Time</small>
+                <span>5 minutes</span>
+              </li>
+              <li>
+                <small>Cook Time</small>
+                <span>20 minutes</span>
+              </li>
+              <li>
+                <small>Total Time</small>
+                <span>25 minutes</span>
+              </li>
+              <li>
+                <small>Serving</small>
+                <span>2
+                </span>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <div class="mt-4 mt-md-5">
+              <h6>Ingredients</h6>
+              <div class="checklist pb-2">
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="pasta">16oz tagliatelle or pappardelle pasta</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="blacktruffle">1 black truffle</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="evoo">1 tablespoon EVOO</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="garlic">1 clove garlic, minced</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="heavycream">1 1/2 cup heavy cream</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="chickenbroth">1/2 cup chicken broth</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="cheese">1 cup Parmigiano Reggiano cheese</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="pastawater">1/2 cup pasta water</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="saltandpepper">Salt and pepper, to taste</label>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="mt-5">
+              <h6>Instructions</h6>
+              <ul class="instruction-list list-unstyled">
+                <li>
+                  <span>1</span>
+                  Bring a large pot of water to a boil.
+                </li>
+                <li>
+                  <span>2</span>
+                  Place a large saute pan over medium heat, and add the olive oil. Add garlic and cook for 1 minute until fragrant. Add chicken broth and let steam for a few seconds. 
+                </li>
+                <li>
+                  <span>3</span>
+                  Add heavy cream, and whisk. When bubbles form reduce the heat to very low heat and add a bit of salt and pepper to taste. Whisk again.
+                </li>
+                <li>
+                  <span>4</span>
+                  Cook for about 2 minutes until the sauce has slightly reduced, it should be still liquid. Add parmigiano cheese. Stir to combine. Turn the heat off. Cover with lid. 
+                </li>
+                <li>
+                  <span>5</span>
+                  Add salt and pasta to boiling water. Cook according to al-dente package directions.
+                </li>
+                <li>
+                  <span>6</span>
+                  Once pasta is cooked, reserve 1/2 cup of pasta water. Drain the pasta and add to the pan with the cream sauce. If the sauce looks dry, add a bit of the reserved pasta water. 
+                </li>
+                <li>
+                  <span>7</span>
+                  Stir until the pasta is well covered with the cream sauce. Garnish with shaved black truffles and a sprinkle of cheese.
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/roastedredpepperpasta" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/roastedredpepperpasta.jpg" class="w-100" alt="Roasted Red Pepper Pasta">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/roastedredpepperpasta" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Roasted Red Pepper Pasta</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/soup" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/chickennoodlesoup.jpg" class="w-100" alt="Chicken Noodle Soup">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/soup" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chicken Noodle Soup</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/macandcheese" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/mac1.png" class="w-100" alt="Mac & Cheese">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/macandcheese" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Mac & Cheese</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/trufflepasta" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/trufflepasta.heic" class="w-100" alt="Truffle Pasta">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/trufflepasta" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Truffle Pasta</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-    </div>
     </section>
   </div>
 
@@ -259,7 +252,6 @@
   </footer>
 </section>
 
-<!-- Tastebite Scripts -->
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/html5.min.js"></script>
 <script src="assets/js/sticky.min.js"></script>
